# swhid-py

./: Cargo.toml  README.md  example_usage.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/swhid_py/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_conformance.py  test_swhid_py.py
